--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
-        <title>HTML/CSSの学習aaaaaaaaaaaaaa</title>
+        <title>HTML/CSSの学習aaaaaaaaaaaaaabbbbbbbbbbbb</title>
         <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
